[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/player/player_core.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/player/player_core_local_input.gd" type="Script" id=2]
[ext_resource path="res://game/player/player_core_local_input_special.gd" type="Script" id=3]
[ext_resource path="res://game/player/grappling_hook/gh_visual_point_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/player/player_core_local_debugui.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/player/fire_grapplinghook1.mp3" type="AudioStream" id=9]

[node name="PlayerCoreLocal" instance=ExtResource( 1 )]

[node name="SkeletonIK" parent="Model/Armature/Skeleton" index="2"]
target_node = NodePath("../../../../GrapplingHook/IKTarget")

[node name="Sound_Jump" parent="Model" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Sound_Shoot_GrapplingHook_1" parent="Model" index="7"]
transform = Transform( 1.53846, 0, 0, 0, 1.53846, 0, 0, 0, 1.53846, 0, 0, 0 )
stream = ExtResource( 9 )
attenuation_filter_cutoff_hz = 5000.0

[node name="Input" type="Node" parent="." index="4"]
script = ExtResource( 2 )

[node name="SpecialInput" type="Node" parent="." index="5"]
script = ExtResource( 3 )

[node name="CameraHead" type="Spatial" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.5, 0 )

[node name="CameraPivot" type="Spatial" parent="CameraHead" index="0"]

[node name="GrappleHookCast" type="RayCast" parent="CameraHead/CameraPivot" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.740826, 0.0206239 )
enabled = true
cast_to = Vector3( 0, 0, -400 )
collision_mask = 2
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5.0

[node name="ClippedCamera" type="ClippedCamera" parent="CameraHead/CameraPivot" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5 )
fov = 90.0
far = 8192.0

[node name="PlayerDebugUI" parent="." index="7" instance=ExtResource( 5 )]

[node name="GrappleVisualPoint_1" parent="GrapplingHook" index="1" instance=ExtResource( 4 )]

[connection signal="player_jump" from="Input" to="." method="_on_Input_player_jump"]
[connection signal="player_mousemotion_event" from="Input" to="." method="_on_Input_player_mousemotion_event"]
[connection signal="player_move" from="Input" to="." method="_on_Input_player_move"]
[connection signal="player_release_grapplinghook" from="Input" to="." method="_on_Input_player_release_grapplinghook"]
[connection signal="player_restore_origin" from="Input" to="." method="_on_Input_player_restore_origin"]
[connection signal="player_shoot_grapplinghook" from="Input" to="." method="_on_Input_player_shoot_grapplinghook"]
[connection signal="player_toggle_light" from="Input" to="." method="_on_Input_player_toggle_light"]

[editable path="Model"]
